Added home and nav-bar components and user module

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,5 +4,10 @@
     "user-field": "Usuario",
     "pwd-field": "Contraseña",
     "submit": "Ingresar"
+  },
+  "UserListComponent": {
+    "title": "Usuarios",
+    "search": "Buscar",
+    "new-button": "Crear nuevo usuario"
   }
 }
