--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,6 +15,8 @@
       "email": "EMAIL",
       "role": "ROL",
       "status": "ESTADO"
-    }
+    },
+    "statusActive": "ACTIVO",
+    "statusInactive": "INACTIVO"
   }
 }
