Added loading indicator module

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,6 +17,7 @@
       "status": "ESTADO"
     },
     "statusActive": "ACTIVO",
-    "statusInactive": "INACTIVO"
+    "statusInactive": "INACTIVO",
+    "no-users-created": "Todavía no se ha creado ningún usuario"
   }
 }
