ST-26 Added AuthGuard for role-based authorization

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,5 +19,8 @@
     "statusActive": "ACTIVO",
     "statusInactive": "INACTIVO",
     "no-users-created": "Todavía no se ha creado ningún usuario"
+  },
+  "ProviderListComponent": {
+    "title": "Proveedores"
   }
 }
