--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -20,6 +20,22 @@
     "statusInactive": "INACTIVO",
     "no-users-created": "Todavía no se ha creado ningún usuario"
   },
+  "NewUserComponent": {
+    "username-and-email-already-registered": "Nombre de usuario y Email ya registrados.",
+    "username-already-registered": "Nombre de usuario ya registrado, intente con uno diferente.",
+    "email-already-registered": "Nombre de email ya registrado, intente con uno diferente.",
+    "username-unsupported-characters": "Nombre de usuario no puede contener caracteres especiales.",
+    "firstname-unsupported-characters": "Nombre no puede contener números o caracteres especiales.",
+    "lastname-unsupported-characters": "Apellido no puede contener números o caracteres especiales.",
+    "firstName-min-length": "El nombre debe contener 2 caracteres o más.",
+    "lastName-min-length": "El apellido debe contener 2 caracteres o más.",
+    "password-not-match": "Las contraseñas no coinciden, por favor intente de nuevo.",
+    "email-not-match": "El email no coincide, por favor intente de nuevo.",
+    "ok": "El usuario ha sido creado exitosamente!",
+    "successNotificationTitle": "¡Todo salio según lo planeado!",
+    "errorNotificationTitle": "¡Hubo un problema!",
+    "errorNotificationMessage": "Por favor, revisa que las casillas requeridas estén completadas correctamente."
+  },
   "ProviderListComponent": {
     "title": "Proveedores"
   }
