ST-41 Added icons for View, Delete and Inactivate functions

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,8 @@
       "name": "NOMBRE",
       "email": "EMAIL",
       "role": "ROL",
-      "status": "ESTADO"
+      "status": "ESTADO",
+      "actions": "ACCIONES"
     },
     "statusActive": "ACTIVO",
     "statusInactive": "INACTIVO",
