ST-47 Added content and functionality to user-view Component

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -83,5 +83,21 @@
   "UserDropdownComponent": {
     "account-settings": "Configuración",
     "logout": "Cerrar sesión"
+  },
+  "UserViewComponent": {
+    "title": "Información de Usuario",
+    "userData": "Datos de cuenta",
+    "personalData": "Datos personales",
+    "contactData": "Datos de contacto",
+    "username-field": "Nombre de usuario",
+    "role-field": "Rol",
+    "email-field": "Email",
+    "firstName-field": "Nombre",
+    "lastName-field": "Apellido",
+    "isActive-field": "Estado",
+    "noEmail": "Usuario sin Email",
+    "isActive": "Deshabilitar",
+    "isInactive": "Habilitar",
+    "goBack": "Volver"
   }
 }
