ST-52 Added user settings component

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -99,5 +99,28 @@
     "isActive": "Deshabilitar",
     "isInactive": "Habilitar",
     "goBack": "Volver"
+  },
+  "UserSettingsComponent": {
+    "title": "¡Hola, ",
+    "personalData": "Datos Personales",
+    "changePassword": "Cambiar Contraseña",
+    "changeEmail": "Cambiar Email",
+    "firstName-field": "Nombre",
+    "lastName-field": "Apellido",
+    "oldPassword-field": "Contraseña actual",
+    "password-field": "Nueva contraseña",
+    "confirm-password-field": "Confirmar contraseña",
+    "email-field": "Email",
+    "confirmEmail-field": "Confirmar Email",
+    "confirm-email-empty": "Por favor, confirme el email.",
+    "email-already-in-use": "El email ya se encuentra registrado.",
+    "incorrect-current-password": "Contraseña actual incorrecta, intenta de nuevo.",
+    "new-password-not-provided": "No se proporciono una nueva contraseña.",
+    "password-validate-password": "La contraseña debe tener un minimo de 8 caracteres alfanumericos, incluyendo por lo menos una Mayuscula y una Minuscula.",
+    "confirmPassword-validate-password": "La contraseña debe tener un minimo de 8 caracteres alfanumericos, incluyendo por lo menos una Mayuscula y una Minuscula.",
+    "empty-current-password": "Para cambiar la contraseña, debe proporcionar la contraseña actual.",
+    "submit": "Guardar cambios",
+    "errorNotificationTitle": "¡Hubo un problema!",
+    "ok": "La informacion ha sido actualizada exitosamente!"
   }
 }
