ST-56 added error mesage when password validation fails

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -58,6 +58,8 @@
     "firstname-unsupported-characters": "Nombre no puede contener números o caracteres especiales.",
     "lastname-unsupported-characters": "Apellido no puede contener números o caracteres especiales.",
     "password-not-match": "Las contraseñas no coinciden, por favor intente de nuevo.",
+    "password-validate-password": "La contraseña debe tener al menos una mayúscula, una minúscula y un número.",
+    "confirmPassword-validate-password": "La contraseña debe tener al menos una mayúscula, una minúscula y un número.",
     "ok": "El usuario ha sido creado exitosamente!",
     "successNotificationTitle": "¡Todo salio según lo planeado!",
     "errorNotificationTitle": "¡Hubo un problema!",
