--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -24,8 +24,6 @@
     "remove-user": "Eliminar usuario",
     "disable-user": "Deshabilitar usuario",
     "enable-user": "Habilitar usuario",
-    "successNotificationTitle": "¡Todo salio según lo planeado!",
-    "errorNotificationTitle": "¡Hubo un problema!",
     "delete": {
       "ok": "El usuario ha sido eliminado exitosamente!"
     },
@@ -59,8 +57,6 @@
     "lastname-unsupported-characters": "Apellido no puede contener números o caracteres especiales.",
     "password-not-match": "Las contraseñas no coinciden, por favor intente de nuevo.",
     "ok": "El usuario ha sido creado exitosamente!",
-    "successNotificationTitle": "¡Todo salio según lo planeado!",
-    "errorNotificationTitle": "¡Hubo un problema!",
     "errorNotificationMessage": "Por favor, revisa que las casillas requeridas estén completadas correctamente.",
     "submit": "Crear",
     "cancel": "Cancelar"
@@ -80,7 +76,8 @@
     "lastName-min-length": "El apellido debe contener 2 caracteres o más.",
     "lastName-max-length": "El apellido puede contener un máximo de 60 caracteres.",
     "email": "Ingrese un email valido.",
-    "email-not-match": "El email debe coincidir."
+    "email-not-match": "El email debe coincidir.",
+    "description-max-length": "La descripción del nivel puede contener un máximo de 200 caracteres."
   },
   "UserDropdownComponent": {
     "account-settings": "Configuración",
@@ -122,7 +119,6 @@
     "confirmPassword-validate-password": "La contraseña debe tener un minimo de 8 caracteres alfanumericos, incluyendo por lo menos una Mayuscula y una Minuscula.",
     "empty-current-password": "Para cambiar la contraseña, debe proporcionar la contraseña actual.",
     "submit": "Guardar cambios",
-    "errorNotificationTitle": "¡Hubo un problema!",
     "ok": "La informacion ha sido actualizada exitosamente!"
   },
   "AssetLevelListComponent": {
@@ -138,6 +134,15 @@
     "delete": {
       "ok": "El nivel de activo ha sido eliminado exitosamente!"
     }
+  },
+  "AssetLevelCreateComponent": {
+    "title": "Crear nuevo nivel de activo",
+    "description-field": "Descripción",
+    "submit": "Crear",
+    "cancel": "Cancelar",
+    "errorNotificationMessage": "Por favor, revisa que las casillas requeridas estén completadas correctamente.",
+    "description-is-not-empty": "La descripción del activo no puede estar vacía.",
+    "ok": "¡El nivel de activo se creó con éxito!"
   },
   "successNotificationTitle": "¡Todo salió según lo planeado!",
   "errorNotificationTitle": "¡Hubo un problema!"
