--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -74,7 +74,8 @@
     "lastName-max-length": "El apellido puede contener un máximo de 60 caracteres.",
     "email": "Ingrese un email valido.",
     "email-not-match": "El email debe coincidir.",
-    "description-max-length": "La descripción del nivel puede contener un máximo de 200 caracteres."
+    "description-max-length": "La descripción del nivel puede contener un máximo de 200 caracteres.",
+    "asset-level-description-same-value": "Para poder editar el nivel de activo, debe cambiar la descripción por una nueva."
   },
   "UserDropdownComponent": {
     "account-settings": "Configuración",
@@ -140,9 +141,18 @@
     "description-is-not-empty": "La descripción del activo no puede estar vacía.",
     "ok": "¡El nivel de activo se creó con éxito!"
   },
+  "AssetLevelEditComponent": {
+    "title": "Editar nivel de activo",
+    "description-field": "Descripción",
+    "submit": "Editar",
+    "cancel": "Cancelar",
+    "description-is-not-empty": "La descripción del activo no puede estar vacía.",
+    "ok": "¡El nivel de activo se editó con éxito!"
+  },
   "GeneralMessages": {
     "successNotificationTitle": "¡Todo salió según lo planeado!",
     "errorNotificationTitle": "¡Hubo un problema!",
-    "errorNotificationMessage": "Por favor, revisa que los campos requeridos estén completados correctamente."
+    "errorNotificationMessage": "Por favor, revisa que los campos requeridos estén completados correctamente.",
+    "accessDenied": "No posee los permisos necesarios para realizar esta acción."
   }
 }
