ST-82 create/edit modal created

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -157,5 +157,9 @@
     "errorNotificationTitle": "¡Hubo un problema!",
     "errorNotificationMessage": "Por favor, revisa que los campos requeridos estén completados correctamente.",
     "accessDenied": "No posee los permisos necesarios para realizar esta acción."
+  },
+  "CreateEditModalComponent": {
+    "okButton": "Aceptar",
+    "cancelButton": "Cancelar"
   }
 }
