ST-72 wrong use of capital letters in some translations fixed

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -49,8 +49,8 @@
     "password-field": "Contraseña",
     "confirm-password-field": "Confirmar contraseña",
     "email-field": "Email",
-    "confirmEmail-field": "Confirmar Email",
-    "username-and-email-already-registered": "Nombre de usuario y Email ya registrados.",
+    "confirmEmail-field": "Confirmar email",
+    "username-and-email-already-registered": "Nombre de usuario y email ya registrados.",
     "username-already-registered": "Nombre de usuario ya registrado, intente con uno diferente.",
     "email-already-registered": "Nombre de email ya registrado, intente con uno diferente.",
     "username-unsupported-characters": "Nombre de usuario no puede contener caracteres especiales.",
@@ -95,7 +95,7 @@
     "firstName-field": "Nombre",
     "lastName-field": "Apellido",
     "isActive-field": "Estado",
-    "noEmail": "Usuario sin Email",
+    "noEmail": "Usuario sin email",
     "isActive": "Deshabilitar",
     "isInactive": "Habilitar",
     "goBack": "Volver"
@@ -104,14 +104,14 @@
     "title": "¡Hola, ",
     "personalData": "Datos Personales",
     "changePassword": "Cambiar Contraseña",
-    "changeEmail": "Cambiar Email",
+    "changeEmail": "Cambiar email",
     "firstName-field": "Nombre",
     "lastName-field": "Apellido",
     "oldPassword-field": "Contraseña actual",
     "password-field": "Nueva contraseña",
     "confirm-password-field": "Confirmar contraseña",
     "email-field": "Email",
-    "confirmEmail-field": "Confirmar Email",
+    "confirmEmail-field": "Confirmar email",
     "confirm-email-empty": "Por favor, confirme el email.",
     "email-already-in-use": "El email ya se encuentra registrado.",
     "incorrect-current-password": "Contraseña actual incorrecta, intenta de nuevo.",
