ST-73 error messages and validators of username field of login component removed

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,7 +4,8 @@
     "user-field": "Usuario",
     "pwd-field": "Contraseña",
     "submit": "Ingresar",
-    "keep-session-open": "Mantener la sesión iniciada"
+    "keep-session-open": "Mantener la sesión iniciada",
+    "incorrect-data": "Nombre de usuario y/o contraseña incorrectos."
   },
   "UserListComponent": {
     "title": "Usuarios",
